@@ -40,6 +40,8 @@ v2.5.0 - xx xxx xxxx
      * Requires DPDK 2.2
      * Added multiqueue support to vhost-user
      * Note: QEMU 2.5+ required for multiqueue support
+   - SELinux:
+     * Introduced SELinux policy package.
 
 v2.4.0 - 20 Aug 2015
 ---------------------
